--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
-  background-color: #444;
+  background-color: #f5f5f5;
 }
 
 header {
@@ -13,72 +13,25 @@ header {
   justify-content: center;
   align-items: center;
   font-size: 28px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-section {
-  margin-top: 3vh;
+main {
   padding: 16px;
+  margin-bottom: 15vh;
+}
+
+article {
+  margin-top: 20px;
 }
 
 .quiz-card {
-  background-color: #666;
-  color: white;
-  border: 1px solid black;
-  border-radius: 8px;
-  padding: 16px;
-  margin-bottom: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 200px;
-}
-
-.content {
-  text-align: center;
-}
-
-.quiz-card h2 {
-  margin: 0 0 16px 0;
-  font-size: 24px;
-}
-
-.quiz-card button {
-  margin: 16px 0;
-  padding: 8px 16px;
-  font-size: 16px;
-  cursor: pointer;
-  background-color: orangered;
-  color: white;
-  border-radius: 8px;
-  border: none;
-}
-
-.tag {
-  display: inline-block;
-  background-color: orangered;
-  padding: 8px;
-  border-radius: 8px 6px;
-  margin-right: 8px;
-}
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: orangered;
-  color: white;
-  text-align: center;
-  padding: 16px 0px;
-}
-footer ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-footer a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
