--- a/style.css
+++ b/style.css
@@ -1,53 +1,91 @@
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;
-  background-color: #f5f5f5;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-header {
-  width: 100%;
-  height: 10vh;
-  background-color: orangered;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 28px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  min-height: 100vh;
 }
 
 main {
-  padding: 16px;
-  margin-bottom: 15vh;
+  padding-inline: 20px;
+  padding-block: 50px;
 }
 
-article {
-  margin-top: 20px;
+h1,
+h2 {
+  margin: 0;
+  text-align: center;
 }
 
-.quiz-card {
+ul {
   list-style: none;
-  background-color: #fff;
-  color: #333;
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  padding: 24px;
+  margin: 0;
+}
+
+.title {
+  padding-inline: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 10vh;
+  background-color: orangered;
+  margin-bottom: 64px;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: orangered;
+}
+
+.navigation__list {
+  display: flex;
+  justify-content: space-around;
+  text-decoration: none;
+}
+
+.card__list {
+  margin: 0;
+  padding-block: 24px;
+  padding-inline: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
   padding: 20px;
-  margin-bottom: 16px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
+  background-color: #555;
+  position: relative;
+}
+.card__bookmark {
+  position: absolute;
+  top: -12px;
+  right: 16px;
+  background-color: orangered;
 }
 
-.tags {
-  margin-top: 10px;
+.list__item {
+  text-decoration: none;
 }
-
-.tag {
-  display: inline-block;
-  background-color: #f0f0f0;
-  color: #666;
-  padding: 4px 8px;
-  margin-right: 8px;
-  border-radius: 4px;
+.tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
 }
-ul li {
-  list-style-type: none;
+.answer__button {
+  position: absolute;
+  top: 76px;
+  left: 140px;
 }
