--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 }
 body {
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #1a1a2e;
   color: #e0e0e0;
-  /transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s;
   position: relative;
 }
 
@@ -20,7 +21,6 @@ header {
   color: #e0e0e0;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,12 +36,7 @@ header {
   border: none;
   font-size: 24px;
   cursor: pointer;
-  color: #e0e0e0;
   transition: color 0.3s;
-}
-
-.mode-toggle .icon {
-  display: inline-block;
 }
 
 main {
@@ -65,7 +60,6 @@ ul li {
   border: 1px solid #1b263b;
   border-radius: 14px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
   padding: 16px;
   margin-bottom: 16px;
   display: flex;
@@ -119,6 +113,7 @@ ul li {
 .card__bookmark {
   background: none;
   border: none;
+  padding: 0;
   cursor: pointer;
   position: absolute;
   top: -28px;
@@ -126,11 +121,13 @@ ul li {
 }
 
 .card__bookmark img {
-  width: 24px;
-  height: 24px;
+  display: block;
+  width: 16px;
+  height: 16px;
 }
 
 footer {
+  margin-top: 32px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -166,7 +163,7 @@ footer a:hover {
   color: #555;
 }
 
-/* Light Mode */
+/* Lightmode Style */
 body.light-mode {
   background-color: #f0f0f0;
   color: #333;
