add hide and show button

--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -42,5 +42,8 @@ body.light-mode a {
 }
 
 body.light-mode a {
-  color: #007bff;
+  color: #007bff;‚
+}
+body.light-mode button:hover {
+  background-color: #f6f6f6
 }
